--- a/MainProject/MainProject/MainProject.vcxproj
+++ b/MainProject/MainProject/MainProject.vcxproj
@@ -67,6 +67,7 @@
     <ClCompile Include="iMain.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="diceboard.h" />
     <ClInclude Include="menu.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
