--- a/MainProject/MainProject/MainProject.vcxproj.filters
+++ b/MainProject/MainProject/MainProject.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="menu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="diceboard.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
